--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DO_SPACES_NAME_APP=your_DO_SPACES_NAME_APP
 DO_SPACES_NAME=your_DO_SPACES_NAME
 PORT=3000
-DB_URL=your_DB_URL
+DB_URL=postgresql://neondb_owner:fRmGJb6yWI3j@ep-tiny-flower-a64kobt1.us-west-2.aws.neon.tech/neondb?sslmode=require&options=project%3Dep-tiny-flower-a64kobt1&sslmode=require
 DO_SPACES_KEY=your_DO_SPACES_KEY
 DO_SPACES_SECRET=your_DO_SPACES_SECRET
 DO_SPACES_ENDPOINT=your_DO_SPACES_ENDPOINT
